tests/ui/errors/snapshots/map_key_constructor_rejects_recursive_enum.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid map key type
   ╭─[test.lis:8:15]
 7 │ fn test() -> int {
 8 │   let mut m = Map.new<List, int>()
   ·               ──────────┬─────────
   ·                         ╰── `List` is not comparable
 9 │   m[List.Nil] = 1
   ╰────
  help: Map keys must be comparable in Go. recursive types cannot be used as map keys · code: [infer.non_comparable_map_key]
