tests/ui/errors/snapshots/map_key_expression_position_rejects_slice_key.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid map key type
   ╭─[test.lis:3:3]
 2 │ fn test() -> int {
 3 │   Map.new<Slice<int>, int>().length()
   ·   ─────────────┬────────────
   ·                ╰── `Slice<int>` is not comparable
 4 │ }
   ╰────
  help: Map keys must be comparable in Go. slices cannot be used as map keys · code: [infer.non_comparable_map_key]
