tests/ui/errors/snapshots/match_non_exhaustive_case_under_matched_constructor.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `match` is not exhaustive
   ╭─[test.lis:3:3]
 2 │ fn test(v: Option<(int, string)>) -> string {
 3 │   match v {
   ·   ───┬───
   ·      ╰── not all patterns covered
 4 │     Some((42, s)) => s,
   ╰────
  help: Handle the missing cases `Option.None` and `Option.Some((_, _))` · code: [infer.non_exhaustive]
