tests/ui/errors/snapshots/match_non_exhaustive_partial.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `match` is not exhaustive
   ╭─[test.lis:3:3]
 2 │ fn test(p: Partial<int, string>) -> int {
 3 │   match p {
   ·   ───┬───
   ·      ╰── not all patterns covered
 4 │     Partial.Ok(n) => n,
   ╰────
  help: Handle the missing case by adding `Partial.Both(_, _) => { ... }` · code: [infer.non_exhaustive]
