tests/ui/errors/snapshots/match_non_exhaustive_three_missing_cases_uses_oxford_comma.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `match` is not exhaustive
    ╭─[test.lis:10:3]
  9 │ fn test(s: Suit) -> int {
 10 │   match s {
    ·   ───┬───
    ·      ╰── not all patterns covered
 11 │     Suit.Hearts => 1,
    ╰────
  help: Handle the missing cases `Suit.Clubs`, `Suit.Diamonds`, and `Suit.Spades`, e.g. `Suit.Clubs => { ... }` · code: [infer.non_exhaustive]
