tests/ui/errors/snapshots/match_redundant_after_wildcard.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unreachable pattern
   ╭─[test.lis:8:5]
 7 │     _ => 0,
 8 │     Active => 1,
   ·     ───┬──
   ·        ╰── arm #2 is unreachable
 9 │   }
   ╰────
  help: This pattern is unreachable because it is already covered by arm #1: `_` · code: [infer.redundant_arm]
