tests/ui/errors/snapshots/match_redundant_or_pattern_duplicate.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unreachable pattern
   ╭─[test.lis:7:11]
 6 │   match c {
 7 │     Red | Red => 1,
   ·           ─┬─
   ·            ╰── this alternative is unreachable
 8 │     Green | Blue => 2,
   ╰────
  help: This alternative is unreachable because it is already covered by an earlier alternative in the same arm · code: [infer.redundant_arm]
